Update with latest Java library changes
- detection processed on a separate thread
- a few useful method
- added BarcodeProcessorDelegate

--- a/CameraView.Vision/CameraView.Vision.csproj
+++ b/CameraView.Vision/CameraView.Vision.csproj
@@ -79,6 +79,7 @@
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Additions\FrameProcessorDelegate.cs" />
+    <Compile Include="Additions\BarcodeProcessorDelegateImpl.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="Additions\AboutAdditions.txt" />
